@@ -2,6 +2,9 @@
 	- made database: "" set the 3600 default for zonefileswrite only
 	  if it is also at its default, so that user settings override.
 	- Unit test for zonefiles-write.
+	- Write xfrd.state for nodb mode again.  Disable xfrd.state with
+	  xfrdfile: "" in config.  Does not check slave zone if state is
+	  same as last time on startup.
 
 18 March 2014: Wouter
 	- unit test for nodb mode.
